--- a/package.json
+++ b/package.json
@@ -21,47 +21,47 @@
     "formatc": "prettier \"content/**/*.json\" --write"
   },
   "dependencies": {
-    "@csstools/postcss-global-data": "^1.0.3",
+    "@csstools/postcss-global-data": "^2.1.0",
     "@mdx-js/react": "^2.3.0",
-    "@octokit/core": "^4.2.0",
+    "@octokit/core": "^5.0.1",
     "classnames": "^2.3.2",
     "clipboardy": "^3.0.0",
-    "gatsby": "^5.7.0",
-    "gatsby-core-utils": "^4.7.0",
-    "gatsby-plugin-image": "^3.7.0",
-    "gatsby-plugin-mdx": "^5.7.0",
-    "gatsby-plugin-netlify": "^5.1.0",
-    "gatsby-plugin-postcss": "^6.7.0",
-    "gatsby-plugin-react-helmet": "^6.7.0",
+    "gatsby": "~5.11.0",
+    "gatsby-core-utils": "~4.11.0",
+    "gatsby-plugin-image": "~3.11.0",
+    "gatsby-plugin-mdx": "~5.11.0",
+    "gatsby-plugin-netlify": "^5.1.1",
+    "gatsby-plugin-postcss": "~6.11.0",
+    "gatsby-plugin-react-helmet": "~6.11.0",
     "gatsby-plugin-react-svg": "^3.3.0",
-    "gatsby-plugin-sharp": "^5.7.0",
-    "gatsby-source-filesystem": "^5.7.0",
-    "gatsby-transformer-json": "^5.7.0",
-    "gatsby-transformer-sharp": "^5.7.0",
-    "postcss": "^8.4.21",
-    "postcss-calc": "^8.2.4",
-    "postcss-custom-media": "^9.1.2",
-    "postcss-custom-properties": "^13.1.4",
+    "gatsby-plugin-sharp": "~5.11.0",
+    "gatsby-source-filesystem": "~5.11.0",
+    "gatsby-transformer-json": "~5.11.0",
+    "gatsby-transformer-sharp": "~5.11.0",
+    "postcss": "^8.4.31",
+    "postcss-calc": "^9.0.1",
+    "postcss-custom-media": "^10.0.2",
+    "postcss-custom-properties": "^13.3.2",
     "postcss-import": "^15.1.0",
-    "postcss-nesting": "^11.2.1",
+    "postcss-nesting": "^12.0.1",
     "postcss-normalize": "^10.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.7.1",
-    "react-select": "^5.7.0",
+    "react-icons": "^4.11.0",
+    "react-select": "^5.7.7",
     "react-youtube": "^10.1.0",
     "remark-gfm": "^3.0.1",
-    "yup": "^1.0.2"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "glob": "^9.1.2",
-    "jest": "^29.4.3",
+    "glob": "^10.3.10",
+    "jest": "^29.7.0",
     "lodash": "^4.17.21",
-    "prettier": "^2.8.4",
-    "sharp": "^0.31.3",
-    "slugify": "^1.6.5",
+    "prettier": "^3.0.3",
+    "sharp": "^0.32.6",
+    "slugify": "^1.6.6",
     "svgo": "^3.0.2"
   }
 }
